# zera-classes

./: .gitignore  CMakeLists.txt  ZeraClassesConfig.cmake.in  project-paths.pri  zera-classes.pri  zera-classes.pro
cmake-post-install-force-last/: CMakeLists.txt
modulemanager/: CMakeLists.txt  data1.qrc  modulemanager_config.json  modulemanager_config_dev.json
modulemanager/app/: CMakeLists.txt  data1.qrc  main.cpp  test_cert.pem
modulemanager/demolib/: CMakeLists.txt  demomodulemanager.cpp  demomodulemanager.h
modulemanager/json-schemas/: logger-configs-schema.json  session-schema.json
modulemanager/lib/: CMakeLists.txt  customerdatasystem.cpp  customerdatasystem.h  jsonsessionloader.cpp  jsonsessionloader.h  licensesystem.cpp  licensesystem.h  licensesysteminterface.h  mockcom5003facade.cpp  mockcom5003facade.h  mockmt310s2facade.cpp  mockmt310s2facade.h  moduledata.cpp  moduledata.h  moduleeventhandler.cpp  moduleeventhandler.h  modulemanager.cpp  modulemanager.h  modulemanagerconfig.cpp  modulemanagerconfig.h  modulemanagersetupfacade.cpp  modulemanagersetupfacade.h  priorityarbitrationsystem.cpp  priorityarbitrationsystem.h  sessionnamesmappingjson.cpp  sessionnamesmappingjson.h  taskallmodulesdestroy.cpp  taskallmodulesdestroy.h  zeradblogger.h
modulemanager/loggerconfigs/: com5003-ref-session.json  demo-session.json  mt310s2-dc-session.json  mt310s2-emob-session-ac.json  mt310s2-emob-session-dc.json  mt310s2-meas-session-dev.json
modulemanager/scpi-doc/: CMakeLists.txt  main.cpp
modulemanager/sessions/: com5003-ced-session.json  com5003-meas-session.json  com5003-perphase-session.json  com5003-ref-session.json  demo-session.json  demo-session1.json  mt310s2-ced-session.json  mt310s2-dc-session-dev.json  mt310s2-dc-session.json  mt310s2-emob-session-ac.json  mt310s2-emob-session-dc.json  mt310s2-emob-session.json  mt310s2-meas-session-dev.json  mt310s2-meas-session.json
modulemanager/src/: customerdatasystem.cpp  jsonloggercontentsessionloader.cpp  jsonloggercontentsessionloader.h  jsonsessionloader.cpp  licensesystem.cpp  licensesystem.h  main.cpp  modman_util.h  moduleeventhandler.cpp  modulemanager.cpp  modulemanager.h  modulemanagerconfig.cpp  modulemanagerconfig.h  priorityarbitrationsystem.cpp  zeradblogger.cpp
modulemanager/systemd/: CMakeLists.txt  modulemanager.service  modulemanager.socket
modulemanager/testlib/: CMakeLists.txt  devicesexportgenerator.cpp  devicesexportgenerator.h  jsonsessionloadertest.cpp  jsonsessionloadertest.h  licensesystemmock.cpp  licensesystemmock.h  modulemanagerconfigtest.cpp  modulemanagerconfigtest.h  modulemanagertest.cpp  modulemanagertest.h  modulemanagertestfullmockedsevices.cpp  modulemanagertestfullmockedsevices.h  modulemanagertestrunner.cpp  modulemanagertestrunner.h  scpiifaceexportgenerator.cpp  scpiifaceexportgenerator.h  sessionexportgenerator.cpp  sessionexportgenerator.h  testmodulemanager.cpp  (+1 more)
modules/: CMakeLists.txt
modules-common/: CMakeLists.txt
zera-basemodule/: CMakeLists.txt  basedspmeasprogram.cpp  basedspmeasprogram.h  basemeaschannel.cpp  basemeaschannel.h  basemeasmodule.cpp  basemeasmodule.h  basemeasprogram.cpp  basemeasprogram.h  basemeasworkprogram.cpp  basemeasworkprogram.h  basemodule.cpp  basemodule.h  basemoduleconfiguration.cpp  basemoduleconfiguration.h  basemoduleeventsystem.cpp  basemoduleeventsystem.h  basesamplechannel.cpp  basesamplechannel.h  boolvalidator.cpp  boolvalidator.h  debug.h  doublevalidator.cpp  doublevalidator.h  ecalcinfo.h  errormessages.h  foutinfo.h  interfaceentity.cpp  interfaceentity.h  intvalidator.cpp  intvalidator.h  jsonparamvalidator.cpp  jsonparamvalidator.h  measchannelinfo.h  measmodeinfo.cpp  measmodeinfo.h  metadata.h  moduleactivist.cpp  moduleactivist.h  moduleerror.cpp  (+41 more)
zera-dev/: CMakeLists.txt  F24LC256.cpp  F24LC256.h  F24LC256_p.cpp  F24LC256_p.h  dev_global.h  i2ceeprom_p.cpp  i2ceeprom_p.h  protocol_zera_bootloader.h  protocol_zera_hard.h  zera-dev.pro  zera_mcontroller_base.cpp  zera_mcontroller_base.h  zera_mcontroller_errorflags.cpp  zeradevConfig.cmake.in
zera-i2c/: CMakeLists.txt  i2cmuxer.cpp  i2cmuxer.h  i2cmuxerscopedonoff.h  protocol_zera_bootloader.h
zera-intel-hex-checker/: CMakeLists.txt  main.cpp
zera-json-params/: CMakeLists.txt  jsonexport.cpp  jsonexport.h  jsonmerge.cpp  jsonmerge.h  main.cpp  zera-json-export.cpp  zera-json-export.h  zera-json-merge.cpp  zera-json-merge.h  zera-json-params-state.cpp  zera-json-params-state.h  zera-json-params-structure.cpp  zera-json-params-structure.h  zera-json-params.cpp  zera-json-params.h  zera-json-paramsConfig.cmake.in
zera-math/: CMakeLists.txt  Doxyfile  complex.cpp  complex.h  crcutils.cpp  crcutils.h  crcutils_p.cpp  crcutils_p.h  gaussmatrix.cpp  gaussmatrix.h  gaussmatrix_p.cpp  gaussmatrix_p.h  gaussnode.h  math_global.h  useratan.cpp  useratan.h  zera-math.pro  zeramathConfig.cmake.in
zera-mcontroller-io/: CMakeLists.txt  README.md  main.cpp
zera-misc/: CMakeLists.txt  dspinterface.cpp  dspinterface.h  dspinterface_p.cpp  dspinterface_p.h  dspmeasdata.cpp  dspmeasdata.h  dspvar.h  ethadress.cpp  ethadress.h  ethadress_p.cpp  ethadress_p.h  intelhexfileio.cpp  intelhexfileio.h  intelhexfileio_p.cpp  intelhexfileio_p.h  interface_p.cpp  interface_p.h  pcbinterface.cpp  pcbinterface.h  pcbinterface_p.cpp  pcbinterface_p.h  rminterface.cpp  rminterface.h  rminterface_p.cpp  rminterface_p.h  secinterface.cpp  secinterface.h  secinterface_p.cpp  secinterface_p.h  singleonoffreferencemanager.h  zera-misc.pro  zera_misc_global.h  zeramiscConfig.cmake.in
zera-modulemanager/: CMakeLists.txt
zera-proxy/: CMakeLists.txt  proxy.cpp  proxy.h  proxy_p.cpp  proxy_p.h  proxyclient.h  proxyclient_p.cpp  proxyclient_p.h  proxyclientsmart.cpp  proxyclientsmart.h  proxyconnection.h  proxynetpeer.cpp
zera-validator/: CMakeLists.txt  commandvalidator.cpp  commandvalidator.h  groupvalidator.cpp  zera-validator.pro  zera-validator_global.h
zera-xml-config/: CMakeLists.txt  Doxyfile  xmlmessagehandler.cpp  zera-xml-config.pro  zeraxmlconfigConfig.cmake.in
(+5561 files in other folders)
