add_subdirectory(dsp-chain-gen-helpers)
add_subdirectory(module-qt-plugin-interface)
add_subdirectory(module-tasks)
add_subdirectory(pcb-channel-manager)
add_subdirectory(service-interfaces)
add_subdirectory(testlib)
add_subdirectory(vf-cpp-module-wrappers)
add_subdirectory(zera-basemodule)
add_subdirectory(vf-moduleinterface)

