add_subdirectory(channel-range-observer)
add_subdirectory(dsp-support)
add_subdirectory(module-qt-plugin-interface)
add_subdirectory(module-tasks)
add_subdirectory(service-common)
add_subdirectory(service-interfaces)
add_subdirectory(testlib)
add_subdirectory(vf-cpp-module-wrappers)
add_subdirectory(zera-basemodule)
add_subdirectory(vf-moduleinterface)

