macro(SET_MODULE_ENV MODULE_NAME)
    string(TOUPPER ${MODULE_NAME} MODULE_NAME_UPPER)
    set(MODULE_CONFIG_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${MODULE_NAME}/configs")
    set(MODULE_PLUGIN_BUILD_PATH "${MODULE_PLUGIN_BUILD_PATH} ${CMAKE_CURRENT_BINARY_DIR}/${MODULE_NAME}/module")

    # Pass source paths to configs for tests. This is module-global to allow e.g
    # scpimodule running tests with other modules
    add_compile_definitions(CONFIG_SOURCES_${MODULE_NAME_UPPER}="${MODULE_CONFIG_PATH}")
endmacro()

# Notes
# * SET_MODULE_ENV !MUST! be set before add_subdirectory
# * Modules not added here don't support common module folder layout (yet)
SET_MODULE_ENV(apimodule)
SET_MODULE_ENV(adjustmentmodule)
SET_MODULE_ENV(blemodule)
SET_MODULE_ENV(burden1module)
SET_MODULE_ENV(dftmodule)
SET_MODULE_ENV(fftmodule)
SET_MODULE_ENV(lambdamodule)
SET_MODULE_ENV(modemodule)
SET_MODULE_ENV(oscimodule)
SET_MODULE_ENV(power1module)
SET_MODULE_ENV(power2module)
SET_MODULE_ENV(power3module)
SET_MODULE_ENV(rangemodule)
SET_MODULE_ENV(referencemodule)
SET_MODULE_ENV(rmsmodule)
SET_MODULE_ENV(samplemodule)
SET_MODULE_ENV(scpimodule)
SET_MODULE_ENV(sec1module)
SET_MODULE_ENV(sem1module)
SET_MODULE_ENV(sfcmodule)
SET_MODULE_ENV(sourcemodule)
SET_MODULE_ENV(spm1module)
SET_MODULE_ENV(statusmodule)
SET_MODULE_ENV(thdnmodule)
SET_MODULE_ENV(transformer1module)

# This makes MODULE_PLUGIN_BUILD_PATH available
add_subdirectory(lib_test_plugin_paths)

add_subdirectory(apimodule)
add_subdirectory(adjustmentmodule)
add_subdirectory(blemodule)
add_subdirectory(burden1module)
add_subdirectory(dftmodule)
add_subdirectory(fftmodule)
add_subdirectory(lambdamodule)
add_subdirectory(modemodule)
add_subdirectory(oscimodule)
add_subdirectory(power1module)
add_subdirectory(power2module)
add_subdirectory(power3module)
add_subdirectory(rangemodule)
add_subdirectory(referencemodule)
add_subdirectory(rmsmodule)
add_subdirectory(samplemodule)
add_subdirectory(scpimodule)
add_subdirectory(sec1module)
add_subdirectory(sem1module)
add_subdirectory(sfcmodule)
add_subdirectory(sourcemodule)
add_subdirectory(spm1module)
add_subdirectory(statusmodule)
add_subdirectory(thdnmodule)
add_subdirectory(transformer1module)
